# MVC-Proyecto

./: .gitignore  GUIA-DESARROLLO.md  README.md  docker-compose.yml  test-connection.py
app/: page.tsx
app/admin/: page.tsx
app/configurar/[tipo]/: page.tsx
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/database/: database.py
backend/app/endpoints/: __init__.py  auth.py  clientes.py  cotizaciones.py  health.py  usuarios.py
backend/app/models/: __init__.py  models.py
backend/app/routes/: __init__.py  auth.py  cotizaciones.py  health.py  usuarios.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  auth.py  database_service.py  pdf_service.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/clientes/: page.tsx
frontend/app/admin/cotizaciones/: page.tsx
frontend/app/admin/cotizaciones/[id]/: page.tsx
frontend/app/admin/reportes/: page.tsx
frontend/app/configurar/[tipo]/: page.tsx
frontend/app/cotizacion/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: api-test.tsx  auth-guard.tsx  connection-diagnostics.tsx
frontend/hooks/: use-api.ts  use-auth.ts
